# Text_reading_alg

./: CMakeLists.txt  README.md  first_text_rec.cpp
