cmake_minimum_required(VERSION 2.8)
project( first_text_rec )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( first_text_rec first_text_rec.cpp )
target_link_libraries( first_text_rec ${OpenCV_LIBS} )
target_link_libraries(first_text_rec -llept -ltesseract)
